Downgrade to Java 8. Удален старый класс HCollectors. Удален статический метод iterate c 3 параметрами у классов HStream, StandardHStream